grammar.txt
Sintaxes para adicionar: import passa nome de arquivo, arquivo será analisado sem a MAIN
sintaxe para switch

program  ::= func | ε
func	 ::= DEFINE type id ( decls ) block program
block	 ::= BEGIN decls stmts END program
decls	 ::= decls decl | ε
decl	 ::= type id;
type	 ::= type [ num ] | basic
stmts	 ::= stmts stmt | ε
stmt	 ::= id = bool;
          |  decls
          |  IF ( bool ) stmt |  IF ( bool ) stmt ELSE stmt
          |  WHILE ( bool ) stmt
          |  DO stmt WHILE ( bool );
          |  BREAK;
          |  PRINT lit;
          |  READ id;
          |  block
          |  RETURN bool;
          |  SWITCH ( num ) stmt
          |  CASE ( num ) stmt
bool	 ::= bool OR join | join
join	 ::= join AND equality | equality
equality ::= equality == rel | equality != rel | rel
rel	     ::= expr < expr | expr <= expr | expr >= expr | expr > expr | expr
expr	 ::= expr + term | expr - term | term
term	 ::= term * unary | term / unary | unary
unary	 ::= NOT unary | - unary | factor
factor	 ::= ( bool ) | id | num | real | true | false
